6.2.15 with JDK 17